# CHIP-8_Emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_RU.md  project_dump.txt
include/: App.h  CHIP_8.h  CPU.h  FrameBuffer.h  GUI.h  Memory.h  Widget.h  utils.hpp
include/core/: CHIP_8.h  CPU.h  FrameBuffer.h  Memory.h
include/debug/: BreakpointManager.h  CPUViewer.h  Debugger.h  Disassembler.h  MemoryViewer.h
include/ui/: GUI.h  ResourceManager.h  Style.h  Widget.h
include/ui/widgets/: Button.h  Display.h  DropdownMenu.h  InputField.h  Label.h  ScrollView.h  Slider.h  Table.h  Toggle.h
src/: App.cpp  CHIP_8.cpp  CPU.cpp  FrameBuffer.cpp  Memory.cpp  main.cpp
src/core/: CHIP_8.cpp  CPU.cpp  FrameBuffer.cpp  Memory.cpp
src/debug/: BreakpointManager.cpp  CPUViewer.cpp  Debugger.cpp  Disassembler.cpp  MemoryViewer.cpp
src/ui/: GUI.cpp
tests/: test_memory.cpp
tests/core/: test_cpu.cpp  test_frame_buffer.cpp  test_memory.cpp
tests/debug/: test_breakpoint_manager.cpp  test_cpu_viewer.cpp  test_debugger.cpp  test_disassembler.cpp  test_memory_viewer.cpp
tests/ui/: test_gui.cpp
